--- a/.gitconfig
+++ b/.gitconfig
@@ -204,6 +204,6 @@
 
 	insteadOf = "gist:"
 [user]
-	name = Zell Liew
-	email = zellwk@gmail.com
-	signingkey = 9C832E1D6C2DE54683E0603EA86649620C0F0AEA
+	name = Brian Zerangue
+	email = brian.zerangue@gmail.com
+	#signingkey = 9C832E1D6C2DE54683E0603EA86649620C0F0AEA
